Bug 327746 - Kolab resource is not functional (calendars / contacts not displayed)
Summary: Kolab resource is not functional (calendars / contacts not displayed)
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Kolab Resource (other bugs)
Version First Reported In: GIT (master)
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-18 06:08 UTC by Luca Beltrame
Modified: 2013-11-18 15:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2013-11-18 06:08:33 UTC
After the recent commit activity due to the PIM sprint in Brno, the Kolab resource is now unable to work properly: in other words, the special IMAP folders are displayed like regular folders in Kontact, and there is no access to neither the calendar nor the  contacts. There is little debug information, as well:

akonadi_kolabproxy_resource(29059) KolabProxyResource::retrieveCollections: RETRIEVECOLLECTIONS

And nothing more than that. This is on top of latest KDEPIM master + libkolabxml 1.0.1 and libkolab 0.5.

Reproducible: Always

Steps to Reproduce:
1. Start KMail
2. Access calendars or contacts
Actual Results:  
Nothing is displayed.

Expected Results:  
Calendars and contacts should be accessible.
Comment 1 Allen Winter 2013-11-18 12:45:53 UTC
Christian, I really would appreciate a quick fix for this one.  I'm in bad shape without my calendars and addressbook.
Comment 2 Christian Mollekopf 2013-11-18 15:15:09 UTC
Sorry guys, I of course should have adapted the kolabproxy with the change in the imap resource. Will be fixed shortly.
Comment 3 Christian Mollekopf 2013-11-18 15:22:04 UTC
Git commit 3f2fe6b4222c8d5447c8016aa9a0b677051effd4 by Christian Mollekopf.
Committed on 18/11/2013 at 15:21.
Pushed by cmollekopf into branch 'master'.

Recognise shared annotations.

The IMAP Resource exposes the annotations now with a /shared prefix.

M  +14   -0    resources/kolabproxy/kolabdefs.cpp
M  +3    -0    resources/kolabproxy/kolabdefs.h
M  +2    -5    resources/kolabproxy/kolabproxyresource.cpp
M  +3    -10   resources/kolabproxy/setupdefaultfoldersjob.cpp
M  +2    -2    resources/kolabproxy/tests/proxyintegrationtest.cpp
M  +8    -8    resources/kolabproxy/tests/unittestenv/kdehome/testdata-res1.xml
M  +1    -2    resources/kolabproxy/upgradejob.cpp

http://commits.kde.org/kdepim-runtime/3f2fe6b4222c8d5447c8016aa9a0b677051effd4