Recognise shared annotations.

The IMAP Resource exposes the annotations now with a /shared prefix.

BUG: 327746